# bulk-hasher

./: .gitignore  CMakeLists.txt  MANIFEST.in  README  autobuild  build.req  hash.c  hash.h  setup.py  test_lib
.github/workflows/: publish-to-test-pypi.yml  python-publish.yml
testing/: CMakeLists.txt  base.c  test.py
